Revert "Merge branch 'Theme_update' into Fix-Page-Index-alignment"
This reverts commit 19a2bd2a614221985c980d2b956de3def7dd1649, reversing
changes made to b3677b5a790cb6e25affbd10bbb73937696e06d7.

--- a/otterwiki/static/css/otterwiki.css
+++ b/otterwiki/static/css/otterwiki.css
@@ -14,8 +14,7 @@
 }
 
 .navbar {
-    background: #fff;
-    border-bottom: 1px solid #e9eaec;
+    background: #d2d2d2;
 }
 
 .content-wrapper:focus {
@@ -44,10 +43,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .relative {
     position: relative;
-}
-
-a{
-    transition: 0.25s ease;
 }
 
 a.anchor,
@@ -232,12 +227,6 @@ pre.mermaid {
     height: 2rem;
 }
 
-.dropdown-menu {
-    margin-top: 0.25rem;
-    bottom: auto !important;
-    transform: none !important;
-}
-
 .dropdown-icon {
     display: -ms-flexbox;
     display: flex;
@@ -277,7 +266,6 @@ pre.mermaid {
     border: 0.4rem solid transparent;
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    transition: none !important;
 }
 
 .dark-mode .dropdown-item-with-icon {
@@ -347,10 +335,6 @@ pre.mermaid {
 
 .sidebar-active {
     font-weight: bold;
-}
-
-.btn {
-    box-shadow: none;
 }
 
 .btn-xsm {
