--- a/otterwiki/static/css/partials/sidebar.css
+++ b/otterwiki/static/css/partials/sidebar.css
@@ -1,8 +1,6 @@
 .sidebar {
     width: 20rem;
-    background: rgb(252, 252, 252);
-    border: none;
-    padding: 5px;
+    background: #e2e2e2;
 }
 
 #toggle-sidebar-btn {
@@ -153,7 +151,6 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
     overflow-wrap: anywhere;
     min-width: 0;
     flex: 1;
-    gap: 0.30rem;
 }
 
 .parent-sidebar-menu > li {
@@ -172,13 +169,11 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
 }
 
 .sidebarmenu details > summary::-webkit-details-marker {
-    display: none;
+  display: none;
 }
 
 .sidebarmenu details > summary::before {
     width: 1.3rem;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
     flex-shrink: 0;
     content: '▹';
 }
@@ -234,15 +229,6 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
 
 .sidebar-link {
     padding-left: 1rem;
-}
-
-.sidebar-link:hover {
-    background-color: #d5d8df5e;
-    border-radius: 10px;
-}
-
-.sidebar-icon {
-    background-color: transparent !important;
 }
 
 .sidebar-divider {
